<resources>
    <string name="app_name">SMD_Assignment1</string>
    <string name="sender_details">SENDER\nDETAILS</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="next">NEXT</string>
    <string name="reciever_details">RECIEVER\nDETAILS</string>
    <string name="review_information">Review Information</string>
    <string name="hname">Name</string>
    <string name="hcountry">Country</string>
    <string name="hcontact">Contact Info</string>
    <string name="haddress">Address</string>
    <string name="fab_submit">fab_submit</string>
</resources>