<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        android:orientation="vertical"
        android:gravity="top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sender_details"
            android:background="@color/red"

            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:textSize="40sp"
            android:fontFamily="sans-serif-medium"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/contact_info"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/contact_information"
            android:inputType="phone"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/country"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:inputType="text"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />


        <Button
            android:id="@+id/btnNextSender"
            android:layout_width="150dp"
            android:layout_height="38dp"
            android:text="@string/next"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

